SERVER-34745 Simplify seekExact() and fix restore() for unique indexes