src/mongo/db/storage/wiredtiger/wiredtiger_prefixed_index_test.cpp
@@ -74,7 +74,9 @@ public:
         BSONObj spec = BSON("key" << BSON("a" << 1) << "name"
                                   << "testIndex"
                                   << "ns"
-                                  << ns);
+                                  << ns
+                                  << "unique"
+                                  << unique);
 
         IndexDescriptor desc(NULL, "", spec);
 
